# wordle-goggles

./: README.md  pyproject.toml  wordle-goggles.py  words_len5.json
wordle_goggles/: main.py  wordle_goggles.py
